# PRO-LAB-v2

./: .gitignore  PRO-LAB_Elias_Bitsch_Link.md  README.md  task.md
ProbRob_Paper_Template_Englisch/: build.sh  paper.tex  refs.bib
docs/: evaluation_overview.md  presentation_outline.md  wrong_init_experiment.md  wrong_init_run_protocol.md
scripts/: analyze_results.py  copy_fav_plots.sh  make_noise_plot.py  prolab.sh  run_demo.sh  run_experiments.sh  run_single.sh  run_wrong_init_sweep.sh  start_all.sh
ws/src/pro_lab_filters/: CMakeLists.txt
ws/src/pro_lab_filters/config/: gz_bridge.yaml  landmarks.yaml  nav2_params_no_amcl_tf.yaml  wrong_init.rviz
ws/src/pro_lab_filters/config/aruco/: marker_01.dae  marker_01.sdf  marker_02.dae  marker_02.sdf  marker_03.dae  marker_03.sdf  marker_04.dae  marker_04.sdf  marker_05.dae  marker_05.sdf  marker_06.dae  marker_06.sdf  marker_07.dae  marker_07.sdf  marker_08.dae  marker_08.sdf
ws/src/pro_lab_filters/config/scenarios/: correct_init.yaml  kidnapped.yaml  offset_1m.yaml  overconfident_wrong.yaml  q_high.yaml  q_low.yaml  r_high.yaml  r_low.yaml  underconfident.yaml  wrong_yaw_pi2.yaml
ws/src/pro_lab_filters/include/pro_lab_filters/: EKF.h  KF.h  LikelihoodField.h  PF.h  kidnap_tool.hpp  teleop_panel.hpp
ws/src/pro_lab_filters/launch/: wrong_init_experiment.launch.py
ws/src/pro_lab_filters/scripts/: gen_marker_models.py  provision_container.sh
ws/src/pro_lab_filters/src/: amcl_init_pose_node.cpp  amcl_relay_node.cpp  apriltag_landmark_detector_node.cpp  auto_kidnapper_node.cpp  cmd_vel_watchdog.cpp  csv_logger_node.cpp  ekf_lf_node.cpp  ekf_node.cpp  gz_truth_relay.cpp  kf_node.cpp  kidnap_tool.cpp  map_odom_tf_publisher.cpp  metrics_node.cpp  pf_node.cpp  teleop_panel.cpp  trajectory_player_node.cpp  truth_relay_node.cpp
